[api] Adapted changes for the terapadog update
- Added "data_types" to ExternalDataSource
- Added "doc_link" to DataType
- Added example implementation of doc_link for the ribo_rna_seq DataType
-  Fixed data type for the RiboSeq example
- Added data_types to all ExternalDataSources
